<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center|top"
    android:orientation="vertical"
    tools:context=".screen.LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_70sdp"
        android:fontFamily="@font/pacifico"
        android:text="Instagram"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/_30sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <!--*  <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#34BFBFBF" />
 -->

    <ListView
        android:id="@+id/li_savedAccounts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_45sdp"
        android:scrollbars="none" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_editAccounts"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginVertical="@dimen/_30sdp"
        android:background="@null"
        android:elevation="0dp"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:textColor="@color/text_skni_color"
        android:visibility="visible"
        android:textStyle="bold"

        />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="2" />

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="@dimen/_16sdp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_Log_into_another_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@null"
        android:elevation="0dp"
        android:textSize="12dp"
        android:text="@string/Log_into_another_account"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSecondary"
        android:textStyle="bold"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:background="@null"
        android:elevation="0dp"
        android:textSize="12dp"

        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnSecondary"
        android:layout_marginBottom="@dimen/_8sdp"
        android:textStyle="bold"
        />
</LinearLayout>